fix tab bar and toggle on mobile

--- a/website/style.css
+++ b/website/style.css
@@ -96,7 +96,7 @@ img {
     display: none;
 }
 
-.container {
+.toggle-container .container {
     font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
     color: #fff;
 }
@@ -117,7 +117,7 @@ img {
     .header-right {
         display: none;
     }
-    .container {
+    .toggle-container {
         display: block;
         cursor: pointer;
         float: right;
